--- a/BlogAuthentication/Views/Account/Register.cshtml
+++ b/BlogAuthentication/Views/Account/Register.cshtml
@@ -1,10 +1,19 @@
 ﻿@model BlogAuthentication.Models.RegisterViewModel
-@{
-    ViewBag.Title = "Register";
-}
+<header class="intro-header" style="background-image: url('/img/home-bg.jpg')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                    <h1>Clean Blog</h1>
+                    <hr class="small">
+                    <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
-<h2>@ViewBag.Title.</h2>
-
+<div class="container">
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -39,3 +48,5 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+</div>
