trying to fix edit details

--- a/BlogAuthentication/Views/Shared/_Layout.cshtml
+++ b/BlogAuthentication/Views/Shared/_Layout.cshtml
@@ -39,6 +39,12 @@
                     <li>
                         @Html.ActionLink("Home", "Index", "Home")
                     </li>
+                    <li>
+                        @Html.ActionLink("All Posts", "Index", "BlogPost")
+                    </li>
+                    <li>
+                        @Html.ActionLink("Create A Post", "Create", "BlogPost")
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
