--- a/BlogAuthentication/Views/Shared/_Layout.cshtml
+++ b/BlogAuthentication/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         @Html.ActionLink("All Posts", "Index", "BlogPost")
                     </li>
                     <li>
+                        @Html.ActionLink("My Blog Posts", "MyPosts", "BlogPost")
+                    </li>
+                    <li>
                         @Html.ActionLink("Create A Post", "Create", "BlogPost")
                     </li>
                 </ul>
