--- a/BlogAuthentication/Views/BlogPost/Edit.cshtml
+++ b/BlogAuthentication/Views/BlogPost/Edit.cshtml
@@ -23,6 +23,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Created)
+        @Html.HiddenFor(model => model.Author)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
