--- a/BlogAuthentication/Views/BlogPost/Delete.cshtml
+++ b/BlogAuthentication/Views/BlogPost/Delete.cshtml
@@ -1,10 +1,18 @@
 ﻿@model BlogAuthentication.Models.BlogPost
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h2>Delete</h2>
+<header class="intro-header" style="background-image: url('/img/post-bg.jpg')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="post-heading">
+                    <h1>Man must explore, and this is exploration at its greatest</h1>
+                    <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
+                    <span class="meta">Posted by <a href="#">Start Bootstrap</a> on August 24, 2014</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -66,7 +74,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "MyPosts")
         </div>
     }
 </div>
